# pre-commit-hooks-java

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.json  .sourceheaders.toml  CHANGELOG.md  README.md  cliff.toml  setup.cfg  setup.py
pre_commit_hooks_java/: __init__.py  check_java_package_statements.py  unused_java_imports.py
