[metadata]
name = pre_commit_hooks_java
version = 0.0.1
description = Some pre-commit hooks for working with Java code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Holzhaus/pre-commit-java-hooks
author = Jan Holthuis
author_email = jan.holthuis@ruhr-uni-bochum.de
license = MPL-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MPL 2.0 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
